--- a/service/zram-swap.config
+++ b/service/zram-swap.config
@@ -21,7 +21,7 @@ _zram_fraction="1/2"
 #	lz4)        _comp_factor="2.5" ;; # expect 2.5:1 compression from lz4
 #	*)          _comp_factor="2"   ;; # default to 2:1 for everything else
 #
-#_comp_factor="2.5"
+_comp_factor="2.5"
 
 # if set skip device size calculation and create a fixed-size swap device
 # (size, in MiB/GiB, eg: "250M" "500M" "1.5G" "2G" "6G" etc.)
@@ -29,6 +29,6 @@ _zram_fraction="1/2"
 # Note: this is the swap device size before compression, real memory use will
 #       depend on compression results, a 2-3x reduction is typical
 #
-#_zram_fixedsize="2G"
+_zram_fixedsize="2G"
 
 # vim:ft=sh:ts=2:sts=2:sw=2:et:
