--- a/service/zram-swap.config
+++ b/service/zram-swap.config
@@ -29,6 +29,6 @@ _comp_factor="2.5"
 # Note: this is the swap device size before compression, real memory use will
 #       depend on compression results, a 2-3x reduction is typical
 #
-_zram_fixedsize="128M"
+_zram_fixedsize="2G"
 
 # vim:ft=sh:ts=2:sts=2:sw=2:et:
