--- a/service/zram-swap.config
+++ b/service/zram-swap.config
@@ -1,10 +1,10 @@
 # compression algorithm to employ (lzo, lz4, zstd, lzo-rle)
 # default: lz4
-_zram_algorithm="lzo-rle"
+_zram_algorithm="lzo*"
 
 # portion of system ram to use as zram swap (expression: "1/2", "2/3", "0.5", etc)
 # default: "1/2"
-#_zram_fraction="1/2"
+_zram_fraction="1/2"
 
 # setting _zram_swap_debugging to any non-zero value enables debugging
 # default: undefined
