--- a/service/zram-swap.config
+++ b/service/zram-swap.config
@@ -1,10 +1,10 @@
 # compression algorithm to employ (lzo, lz4, zstd, lzo-rle)
 # default: lz4
-_zram_algorithm="lzo*"
+_zram_algorithm="lzo"
 
 # portion of system ram to use as zram swap (expression: "1/2", "2/3", "0.5", etc)
 # default: "1/2"
-_zram_fraction="1/2"
+_zram_fraction="1/3"
 
 # setting _zram_swap_debugging to any non-zero value enables debugging
 # default: undefined
@@ -29,6 +29,6 @@ _comp_factor="3"
 # Note: this is the swap device size before compression, real memory use will
 #       depend on compression results, a 2-3x reduction is typical
 #
-_zram_fixedsize="256M"
+_zram_fixedsize="512M"
 
 # vim:ft=sh:ts=2:sts=2:sw=2:et:
