--- a/service/zram-swap.config
+++ b/service/zram-swap.config
@@ -21,7 +21,7 @@ _zram_fraction="1/3"
 #	lz4)        _comp_factor="2.5" ;; # expect 2.5:1 compression from lz4
 #	*)          _comp_factor="2"   ;; # default to 2:1 for everything else
 #
-_comp_factor="3"
+#_comp_factor="3"
 
 # if set skip device size calculation and create a fixed-size swap device
 # (size, in MiB/GiB, eg: "250M" "500M" "1.5G" "2G" "6G" etc.)
