--- a/service/zram-swap.config
+++ b/service/zram-swap.config
@@ -1,6 +1,6 @@
 # compression algorithm to employ (lzo, lz4, zstd, lzo-rle)
 # default: lz4
-_zram_algorithm="lzo"
+_zram_algorithm="zstd"
 
 # portion of system ram to use as zram swap (expression: "1/2", "2/3", "0.5", etc)
 # default: "1/2"
